syntax = "proto3";

package com.almeidavc.grpcbackend;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

option java_multiple_files = true;
option java_package = "com.almeidavc.grpcbackend.lib";

service HospitalService {
    rpc CreateHospital(CreateHospitalRequest) returns (Hospital);
    rpc UpdateHospital(UpdateHospitalRequest) returns (Hospital);
    rpc DeleteHospital(DeleteHospitalRequest) returns (google.protobuf.Empty);
}

message Hospital {
    int64 id = 1;
    string title = 2;
    string address = 3;
}

message CreateHospitalRequest {
    string hospital_title = 1;
    string hospital_address = 2;
}

message UpdateHospitalRequest {
    Hospital hospital = 1;
    google.protobuf.FieldMask update_mask = 2;
}

message DeleteHospitalRequest {
    int64 hospital_id = 1;
}
