syntax = "proto3";

package com.almeidavc.grpcbackend;

import "google/protobuf/empty.proto";
import "hospital.proto";
import "patient.proto";

option java_multiple_files = true;
option java_package = "com.almeidavc.grpcbackend.lib";

service PatientHospitalRelationshipService {
    rpc RegisterPatientInHospital(RegisterPatientInHospitalRequest) returns (google.protobuf.Empty);
    rpc ListPatientsByHospital(ListPatientsByHospitalRequest) returns (ListPatientsByHospitalResponse);
    rpc ListHospitalsByPatient(ListHospitalsByPatientRequest) returns (ListHospitalsByPatientResponse);
}

message RegisterPatientInHospitalRequest {
    int64 patient_id = 1;
    int64 hospital_id = 2;
}

message ListPatientsByHospitalRequest {
    int64 hospital_id = 1;
}

message ListPatientsByHospitalResponse {
    repeated Patient patients = 1;
}

message ListHospitalsByPatientRequest {
    int64 patient_id = 1;
}

message ListHospitalsByPatientResponse {
    repeated Hospital hospitals = 1;
}
